<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.Light"
    app:cardCornerRadius="@dimen/_7sdp"
    app:cardElevation="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview1"
            style="@style/TextViewDarkBold"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/logout"
            android:textSize="@dimen/smallTitleFont"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview2"
            style="@style/TextViewLightRegular"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:text="@string/logout_confirmation"
            android:textSize="@dimen/fontMaxLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview1" />

        <TextView
            android:id="@+id/dialog_no"
            style="@style/TextViewDarkSemiBold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/no"
            app:layout_constraintEnd_toStartOf="@id/dialog_yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview2" />

        <TextView
            android:id="@+id/dialog_yes"
            style="@style/TextViewDarkSemiBold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/lightestGray"
            android:gravity="center"
            android:text="@string/yes"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dialog_no"
            app:layout_constraintTop_toTopOf="@id/dialog_no" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>